[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "email-triage-env"
version = "1.0.0"
description = "A real-world email triage OpenEnv environment for AI agent training"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["openenv", "reinforcement-learning", "email", "triage", "nlp"]

dependencies = [
    "openenv-core>=0.2.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.6.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "openai>=1.25.0",
    "PyYAML>=6.0.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["server*"]

[project.urls]
"Homepage" = "https://huggingface.co/spaces/Vansh051201/email-triage-env"
"Repository" = "https://github.com/Vansh051201/email-triage-env"

[tool.openenv]
name = "email-triage-env"
version = "1.0.0"
entry_point = "server.app:main"
port = 7860
sdk = "docker"
multi_mode = true
tasks = ["task_classify", "task_triage", "task_full_triage"]
